--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,11 @@
   "Jwt": {
     "Key": "IngenieriaSoftwarePolitecnicoGranColombiano2025"
   },
+  "WhatsApp": {
+    "AccountSid": "",
+    "AuthToken": "",
+    "FromNumber": "+14155238886"
+  },
   "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
